JumpScript/tests/baselines/reference/esnextmodulekindWithES5Target9.errors.txt
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump(1,15): error TS2307: Cannot find module 'mod'.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump(3,17): error TS2307: Cannot find module 'mod'.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump(5,20): error TS2307: Cannot find module 'mod'.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump(13,15): error TS2307: Cannot find module 'mod'.
tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump(15,17): error TS2307: Cannot find module 'mod'.


==== tests/cases/conformance/externalModules/esnext/esnextmodulekindWithES5Target9.jump (5 errors) ====
    import d from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    import {a} from "mod";
                    ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    import * as M from "mod";
                       ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export {a};
    
    export {M};
    
    export {d};
    
    export * from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export {b} from "mod"
                    ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export default d;
    